--- a/in-china/Base.lproj/Main.storyboard
+++ b/in-china/Base.lproj/Main.storyboard
@@ -19,6 +19,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MUO-KJ-i11" customClass="LocationMapView">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="4VS-af-Ugb"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -29,7 +32,7 @@
                             <constraint firstItem="MUO-KJ-i11" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="lSU-7I-Ln7"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Maps" id="9qx-rM-wnM"/>
+                    <navigationItem key="navigationItem" title="Maps" id="Qa9-Uv-Cy4"/>
                     <connections>
                         <outlet property="mapView" destination="MUO-KJ-i11" id="Huj-UK-YJu"/>
                     </connections>
