--- a/in-china/Base.lproj/Main.storyboard
+++ b/in-china/Base.lproj/Main.storyboard
@@ -45,14 +45,38 @@
                                             <action selector="playSoundAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pW0-fW-Yre"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="place" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUD-nK-zCz">
+                                        <rect key="frame" x="12" y="8" width="235" height="38"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                        <color key="textColor" red="0.53725490196078429" green="0.53725490196078429" blue="0.53725490196078429" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0 km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ao-z5-pTq">
+                                        <rect key="frame" x="247" y="8" width="65" height="38"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="65" id="gA2-WT-EII"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                        <color key="textColor" red="0.53725490200000003" green="0.53725490200000003" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="n3p-H2-MBi" secondAttribute="trailing" constant="12" id="2pB-4q-Ng2"/>
+                                    <constraint firstItem="n3p-H2-MBi" firstAttribute="top" secondItem="SUD-nK-zCz" secondAttribute="bottom" constant="8" id="8Se-5U-utX"/>
+                                    <constraint firstAttribute="trailing" secondItem="9ao-z5-pTq" secondAttribute="trailing" constant="8" id="IAK-0A-aV1"/>
+                                    <constraint firstItem="9ao-z5-pTq" firstAttribute="top" secondItem="DaI-wB-gua" secondAttribute="top" constant="8" id="XSt-FG-v3w"/>
                                     <constraint firstItem="n3p-H2-MBi" firstAttribute="leading" secondItem="DaI-wB-gua" secondAttribute="leading" constant="12" id="as9-Sd-hHU"/>
+                                    <constraint firstItem="n3p-H2-MBi" firstAttribute="top" secondItem="9ao-z5-pTq" secondAttribute="bottom" constant="8" id="bfZ-5O-x45"/>
+                                    <constraint firstItem="SUD-nK-zCz" firstAttribute="leading" secondItem="DaI-wB-gua" secondAttribute="leading" constant="12" id="cnF-JS-eTt"/>
+                                    <constraint firstItem="9ao-z5-pTq" firstAttribute="leading" secondItem="SUD-nK-zCz" secondAttribute="trailing" id="ebf-JK-Cb0"/>
+                                    <constraint firstItem="SUD-nK-zCz" firstAttribute="top" secondItem="DaI-wB-gua" secondAttribute="top" constant="8" id="hxk-QK-z6I"/>
                                     <constraint firstAttribute="bottom" secondItem="n3p-H2-MBi" secondAttribute="bottom" constant="12" id="mrv-yN-FGS"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="distanceLabel" destination="9ao-z5-pTq" id="fho-Xw-ixu"/>
+                                    <outlet property="titleLabel" destination="SUD-nK-zCz" id="eXX-r3-2am"/>
                                     <outlet property="voiceButton" destination="n3p-H2-MBi" id="VFy-V7-9h7"/>
                                 </connections>
                             </view>
