[21] push to map view

--- a/in-china/Base.lproj/Places.storyboard
+++ b/in-china/Base.lproj/Places.storyboard
@@ -14,7 +14,7 @@
         <!--Malls-->
         <scene sceneID="Pri-MJ-XQG">
             <objects>
-                <tableViewController id="cqU-s4-Kxj" customClass="ICSearchPlacesTableViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ICSearchPlacesTableViewController" id="cqU-s4-Kxj" customClass="ICSearchPlacesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="74" sectionHeaderHeight="28" sectionFooterHeight="28" id="kFS-Ji-6Mx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
