--- a/in-china/Base.lproj/EntryMenu.storyboard
+++ b/in-china/Base.lproj/EntryMenu.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="aZW-wn-FlC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="aZW-wn-FlC">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="HelveticaNeue.ttc">
@@ -38,44 +40,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="shopping menu" translatesAutoresizingMaskIntoConstraints="NO" id="nVb-Wb-8xA">
-                                <rect key="frame" x="36" y="63" width="60" height="60"/>
-                            </imageView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="hospital" translatesAutoresizingMaskIntoConstraints="NO" id="M5V-Ef-MWM">
-                                <rect key="frame" x="223" y="64" width="60" height="60"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shopping" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucy-f1-sVg">
-                                <rect key="frame" x="30" y="127" width="74" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shopping" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucy-f1-sVg">
+                                <rect key="frame" x="41" y="174" width="70" height="19"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.22352941176470589" green="0.22352941176470589" blue="0.22352941176470589" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hospital" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHq-Qi-gzC">
-                                <rect key="frame" x="223" y="127" width="74" height="21"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSN-jL-YLl">
-                                <rect key="frame" x="36" y="64" width="60" height="84"/>
-                                <state key="normal">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSN-jL-YLl">
+                                <rect key="frame" x="46" y="107" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="kIB-PG-nsd"/>
+                                    <constraint firstAttribute="width" constant="60" id="rzn-Uz-Ygx"/>
+                                </constraints>
+                                <state key="normal" image="shopping menu">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="goShopping:" destination="pJ4-cR-9Rp" eventType="touchUpInside" id="2sA-zY-m3Q"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVn-B9-Dgu">
-                                <rect key="frame" x="225" y="72" width="59" height="76"/>
-                                <state key="normal">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVn-B9-Dgu">
+                                <rect key="frame" x="213" y="107" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="kRy-xM-kDj"/>
+                                    <constraint firstAttribute="height" constant="60" id="zHx-4K-eXC"/>
+                                </constraints>
+                                <state key="normal" image="hospital">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="goHospital:" destination="pJ4-cR-9Rp" eventType="touchUpInside" id="uwM-Kb-eDy"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hospital" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHq-Qi-gzC">
+                                <rect key="frame" x="214" y="174" width="59" height="19"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" red="0.22352941176470589" green="0.22352941176470589" blue="0.22352941176470589" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kHq-Qi-gzC" firstAttribute="centerX" secondItem="vVn-B9-Dgu" secondAttribute="centerX" id="0Yx-2Q-Ls8"/>
+                            <constraint firstItem="ucy-f1-sVg" firstAttribute="centerX" secondItem="uSN-jL-YLl" secondAttribute="centerX" id="HdT-WQ-56x"/>
+                            <constraint firstItem="vVn-B9-Dgu" firstAttribute="bottom" secondItem="uSN-jL-YLl" secondAttribute="bottom" id="WbF-lZ-4gF"/>
+                            <constraint firstItem="uSN-jL-YLl" firstAttribute="leading" secondItem="GXQ-f1-6sm" secondAttribute="leadingMargin" constant="30" id="X75-En-H4s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vVn-B9-Dgu" secondAttribute="trailing" constant="31" id="Ygq-3x-8Ic"/>
+                            <constraint firstItem="ucy-f1-sVg" firstAttribute="top" secondItem="uSN-jL-YLl" secondAttribute="bottom" constant="7" id="cVF-qc-jzh"/>
+                            <constraint firstItem="uSN-jL-YLl" firstAttribute="top" secondItem="0Gz-ag-uUd" secondAttribute="bottom" constant="43" id="rb5-F4-DQA"/>
+                            <constraint firstItem="kHq-Qi-gzC" firstAttribute="bottom" secondItem="ucy-f1-sVg" secondAttribute="bottom" id="wWt-NH-QRP"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="In China" id="4hg-Om-YDv"/>
                 </viewController>
@@ -88,9 +102,4 @@
         <image name="hospital" width="60" height="60"/>
         <image name="shopping menu" width="60" height="60"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
